--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generateBtn" class="btn">Generate Password</button>
+          <button id="generate" class="btn">Generate Password</button>
+          <button class="copy-btn" onclick="CopyPassword()">Copy to Clipboard</button>
         </div>
       </div>
     </div>
